--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,14 @@ dist: bionic
 language: python
 python:
 - 2.7
-install:
+script:
   - sudo add-apt-repository -y ppa:tricksterguy87/ppa-gt-cs2110
   - sudo apt-get update -qq
-  - sudo apt-get install complx-tools
-  - sudo apt-get install -y build-essential g++ cmake libboost-all-dev libglib2.0-dev castxml python-pip 
+  - sudo apt-get install -y complx-tools
+  - sudo apt-get install -y build-essential g++ cmake libboost-all-dev libglib2.0-dev castxml 
   - sudo pip install enum34 six scikit-build
   - sudo pip install pyLC3
   - sudo ldconfig
-    
-script:
   - mkdir build && cd build
   - cmake ..
   - ctest -VV
