--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - sudo add-apt-repository -y ppa:tricksterguy87/ppa-gt-cs2110
   - sudo apt-get update -qq
   - sudo apt-get install -y complx-tools
-  - sudo apt-get install -y build-essential g++ cmake libboost-all-dev libglib2.0-dev castxml 
+  - sudo apt-get install -y build-essential g++ cmake libboost-python-dev libboost-serialization-dev libboost-test-dev libglib2.0-dev castxml 
   - pip install enum34 six scikit-build parameterized
   - pip install pyLC3
   - sudo ldconfig
