--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,31 +2,25 @@ cmake_minimum_required(VERSION 3.5)
 
 project(pylc3-examples)
 
-find_package(PythonInterp REQUIRED)
+include(FindPythonInterp)
 
 enable_testing()
 
+function(make_test TEST TEST_FILE)
+    get_filename_component(PARENT_DIR ${TEST_FILE} DIRECTORY)
+    add_test(
+        NAME ${TEST}
+        COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${TEST_FILE}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${PARENT_DIR}
+    )
+    set_property(
+        TEST ${TEST}
+        APPEND PROPERTY
+        ENVIRONMENT PYTHONPATH=${CMAKE_CURRENT_SOURCE_DIR}/util
+    )
+endfunction(make_test TEST TEST_FILE)
 
-add_test(
-    NAME simple_add_test 
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_add/simple_add_test.py
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/simple_add
-)
+make_test(simple_add_test simple_add/simple_add_test.py)
+make_test(simple_sum_test simple_sum/simple_sum_test.py)
+make_test(simple_string_test simple_string/simple_string_test.py)
 
-set_property(
-    TEST simple_add_test 
-    APPEND PROPERTY
-    ENVIRONMENT PYTHONPATH=${CMAKE_CURRENT_SOURCE_DIR}/util:$ENV{PYTHONPATH}
-)
-
-add_test(
-    NAME simple_sum_test 
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_sum/simple_sum_test.py
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/simple_sum
-)
-
-set_property(
-    TEST simple_sum_test 
-    APPEND PROPERTY
-    ENVIRONMENT PYTHONPATH=${CMAKE_CURRENT_SOURCE_DIR}/util:$ENV{PYTHONPATH}
-)
