--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ endfunction(make_test TEST TEST_FILE)
 make_test(simple_add_test simple_add/simple_add_test.py)
 make_test(simple_sum_test simple_sum/simple_sum_test.py)
 make_test(simple_string_test simple_string/simple_string_test.py)
+make_test(simple_io_test simple_io/simple_io_test.py)
 
