Add test for fillData/assertDataAt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ make_test(simple_add_test simple_add/simple_add_test.py)
 make_test(simple_sum_test simple_sum/simple_sum_test.py)
 make_test(simple_string_test simple_string/simple_string_test.py)
 make_test(simple_io_test simple_io/simple_io_test.py)
+make_test(student_test simple_data/student_test.py)
 make_test(linked_list_test linked_list/linked_list_test.py)
 make_test(double_subr_test lc3_calling_convention_basic/double_subr_test.py)
 make_test(add_chars_test lc3_calling_convention_extra/add_chars_test.py)
