--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: focal
 language: python
 python: 3.8
 script:
-  - sudo add-apt-repository -y ppa:tricksterguy87/ppa-gt-cs2110
+  - sudo add-apt-repository -y ppa:tricksterguy87/complx
   - sudo apt-get update -qq
   - sudo apt-get install -y complx-tools
   - sudo apt-get install -y build-essential g++ cmake libboost-python-dev libboost-serialization-dev libboost-test-dev libglib2.0-dev castxml 
