--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ dist: focal
 language: python
 python: 3.8
 script:
-  - sudo add-apt-repository -y ppa:tricksterguy87/complx
-  - sudo apt-get update -qq
-  - sudo apt-get install -y complx-tools
-  - sudo apt-get install -y build-essential g++ cmake libboost-python-dev libboost-serialization-dev libboost-test-dev libglib2.0-dev castxml 
-  - pip3 install enum34 six scikit-build parameterized
-  - pip3 install pyLC3
-  - sudo ldconfig
   - mkdir build && cd build
   - cmake ..
   - ctest -VV
+before-install:
+  - sudo add-apt-repository -y ppa:tricksterguy87/complx
+  - sudo apt-get update -qq
+  - sudo apt-get install -y complx-tools
