--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ script:
   - mkdir build && cd build
   - cmake ..
   - ctest -VV
-before-install:
-  - sudo add-apt-repository -y ppa:tricksterguy87/complx
-  - sudo apt-get update -qq
-  - sudo apt-get install -y complx-tools
+install: 
+  - pip3 install -r requirements.txt
+addons:
+  apt:
+    update: true
+    sources:
+      - ppa:tricksterguy87/complx
+    packages:
+      - complx-tools
