--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ script:
   - mkdir build && cd build
   - cmake ..
   - ctest -VV
+before-install:
+  - sudo add-apt-repository -y ppa:tricksterguy87/complx
 install: 
   - pip3 install -r requirements.txt
 addons:
   apt:
     update: true
-    sourceline:
-      - ppa:tricksterguy87/complx
     packages:
       - complx-tools
