--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,6 @@ script:
   - ctest -VV
 before-install:
   - sudo add-apt-repository -y ppa:tricksterguy87/complx
-install: 
+  - sudo apt update -qq
+  - sudo apt install complx-tools
   - pip3 install -r requirements.txt
-addons:
-  apt:
-    update: true
-    packages:
-      - complx-tools
