--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ script:
   - mkdir build && cd build
   - cmake ..
   - ctest -VV
-before-install:
+before_install:
   - sudo add-apt-repository -y ppa:tricksterguy87/complx
   - sudo apt update -qq
+install:
   - sudo apt install complx-tools
-  - pip3 install -r requirements.txt
+  - sudo pip3 install enum34 six scikit-build parameterized
+  - sudo pip3 install pyLC3
