--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,9 +26,8 @@ jobs:
         run: pip3 install enum34 six scikit-build parameterized
       - name: Install pyLC3
         run: pip3 install pyLC3
-      - name: Make build directory
-        run: mkdir build && cd build
-      - name: Run CMake
-        run:  cmake ..
       - name: Run Tests
-        run: ctest -VV
+        run: |
+            mkdir build && cd build
+            cmake ..
+            ctest -VV
